@@ -2040,4 +2040,6 @@
 	  the path to a block driver and then erases the underlying FLASH memory
 	  (assuming that the block driver is an MTD driver wrapped in the FTL
 	  layer).
-
+	* drivers/bch:  Fixed some important bugs in the BCH driver (noted by
+	  Li Zhuoyi (Lzyy)).  This would have effected any large reads or writes
+      (larger than the hardware sector size).
